[1.5.0-SNAPSHOT]
WARNING: This release changes the default target timestep from 100FPS to 60FPS. 
To change it back set config.targetTimestep to 0.1f

- Updated to libGDX 1.9.6, roboVM 2.3.0 and artemis-odb 2.1.0
- (#68) Added Checkbox, Slider and RadioButton UI elements
- Added Graphics#isWindowReady()
- Added UiContainerOperation and ClearShaderProgramOperation for render pipelines
- Added ScrollBox#setMinHeight to override the style's minimum height
- Added UiElement#defer to defer method calls until the next frame
- Added PerformanceTracker for debugging performance issues
- Added methods to TiledCollisionMapper to map non-collision areas
- Added lightweight classes for static collisions:
-- StaticCollisionBox
-- StaticCollisionCircle
-- StaticCollisionPolygon
- UI elements can now be hidden based on controller type (hidden-controller-xbox360, etc.)
- Changed default target timestep to 60FPS
- ActionListeners now receive event details via ActionEvent instance
- Graphics#drawRect now uses LibGDX ShapeRenderer
- Fixed Button instances not triggering right-click events
- Fixed ScrollBox#setMaxHeight triggering unnecessary layouts
- Fixed Graphics tint value not being set on startup
- Fixed UiContainerRenderTree always set to dirty
- Fixed RepeatableNinePatch not repeating correctly when using TextureRegion
- Fixed UI button up/down controller events triggering when controller is disabled

[1.4.9]
- Fix @PostDeserialize not being invoked for nested objects

[1.4.8]
- Fix UiContainer not clearing active action element
- Fix Rectangle returning 0,0 as its center

[1.4.7]
- Graphics can now draw TiledDrawable instances
- Added RepeatedNinePatch which repeats instead of stretches
- UI element backgrounds can now set backgroundMode to "repeat" or "stretch"

[1.4.6]
- Reduce float array allocations in Polygon#setVertices
- Added ScreenBasedGame#getScreenManager and ScreenManager#getGameScreens

[1.4.5]
- Added Shape#add and Shape#subtract methods for modifying position